<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert_gas_station"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="leoalvesmachado.com.fuelguide.InsertGasStation">

    <TextView
        android:id="@+id/insertGasTitle"
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:text="@string/new_gas_station" />

    <EditText
        android:id="@+id/gasStationName"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/insertGasTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp"
        android:layout_width="350px"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/fuel1"
        android:layout_width="350px"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/gasStationName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:id="@+id/fuel2"
        android:layout_width="350px"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/fuel1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:inputType="numberDecimal" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fuel1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/labelName"
        tools:text="@string/gas_station_name" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fuel2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/labelFuel1"
        tools:text="@string/gas_station_fuel1_price" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fuel2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/labelFuel2"
        tools:text="@string/gas_station_fuel2_price" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/gasStationAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/labelAddress"
        tools:text="@string/gas_station_address" />

    <EditText
        android:id="@+id/gasStationAddress"
        android:layout_width="350px"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:lineSpacingExtra="10sp"
        android:layout_below="@+id/fuel2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp" />

    <Button
        android:text="Button"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/labelName"
        android:id="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="350px"
        tools:text="@string/gas_station_button_submit" />
</RelativeLayout>
